Fixed throwing ForbiddenExeception when user has access to site via query parameter